# opinion-clustering-pipeline

./: .gitignore  AGENTS.md  LICENSE  Makefile  NOTES.md  README.md  pyproject.toml  requirements.in  requirements.txt
docs/: README.md  classification_pipeline_spec.md  classification_review_criteria.md  knowledge_notes.md  openai_free_answer_classification_memo.md  pipeline_spec.md  review_criteria.md
projects/: README.md
scripts/: README.md  category_master_conflicts.py  category_review_priorities.py  classification.py  classification_common.py  classification_keywords.py  clustering.py  clustering_common.py  common.py  curation.py  duplicate_common.py  duplicate_responses.py  embeddings.py  init_project.py  init_question.py  normalize.py  normalize_common.py  normalize_processed.py  override_common.py  override_rule_hits.py  override_rule_summary.py  pipeline.py  promote_override_candidates.py  review.py  review_common.py  review_corrections.py  review_override_candidates.py  review_prep.py  review_samples.py  review_summary.py  scaffold_category_master.py  screening.py  screening_common.py  validate_category_conflicts.py  validate_category_master.py  validate_category_review_priorities.py  validate_cluster_summary.py  validate_clustering_metadata.py  validate_clusters.py  validate_duplicate_responses.py  (+23 more)
templates/project/: README.md
templates/question/: README.md
tests/: conftest.py  test_classification.py  test_clustering.py  test_curation.py  test_screening.py
tools/curation_ui/: README.md  app.js  index.html  style.css
(+31 files in other folders)
